# kisa

./: .gitignore  CMakeLists.txt  DESIGN.md  ENH1.md  README.md  README_CN.md  RELEASE_NOTES.md  llm_calc.c  orderbook_edm_analysis.c  pyproject.toml
docs/: README.md  llm_calc.md  orderbook_edm_analysis.md
examples/: orderbook_edm_analysis  orderbook_edm_analysis.c
include/: kisa.h
python/: README.md  setup.py
python/examples/: llm_calc.py  orderbook_analysis.py
python/kisa/: __init__.py  edm.py  market.py  vector_ops.py
python/tests/: test_edm.py  test_market.py  test_vector_ops.py
src/apps/: llm_calc.c  orderbook_edm_analysis.c
src/core/: avx512_ops.c  control_flow.c  decoder.c  execution.c  execution.py  instruction.c  instructions.py  registers.py  vector_ops.c  vector_ops.c.bak
tests/: perf_test.c  perf_test.py  test_control_flow.c  test_main.c  test_vector_ops.c
